--- a/.github/workflows/run-testsuite-on-big-sur.yaml
+++ b/.github/workflows/run-testsuite-on-big-sur.yaml
@@ -1,4 +1,4 @@
-name: 'Run testsuite'
+name: 'Run testsuite on BigSur'
 on:
   - workflow_dispatch
   - push
@@ -8,20 +8,13 @@ jobs:
     permissions:
       contents: read
     steps:
-      - name: 'Download MacPorts'
-        run: |
-         wget https://github.com/macports/macports-base/releases/download/v2.7.1/MacPorts-2.7.1-11-BigSur.pkg
+      - uses: actions/checkout@v3
       - name: 'Install MacPorts'
-        run: |
-          sudo installer -pkg ./MacPorts-2.7.1-11-BigSur.pkg -target /
-      - name: 'Add MacPorts to the PATH'
-        run: |
-          sudo install -o root -g wheel -m 644 /dev/null /etc/paths.d/900-macports
-          sudo sh -c "printf '/opt/local/bin' > /etc/paths.d/900-macports"
-          printf '/opt/local/bin' > "${GITHUB_PATH}"
-      - name: 'Install SBCL and Confidence dependencies'
-        run: |
-          sudo port install sbcl cl-quicklisp
+        uses: melusina-org/gha-install-macports@v1
+        with:
+          ports: >-
+            sbcl +fancy
+            cl-quicklisp
       - name: 'Install Quicklisp in CI environment'
         run: |
           sbcl --load '/opt/local/share/cl-quicklisp/quicklisp.lisp' --eval '(quicklisp-quickstart:install)' --eval '(ql-util:without-prompting (ql:add-to-init-file))' --quit
