Mask failing testcase
The masked testcase is triggering a compilation error from SBCL.

--- a/.github/workflows/run-testsuite-on-big-sur.yaml
+++ b/.github/workflows/run-testsuite-on-big-sur.yaml
@@ -24,5 +24,8 @@ jobs:
           --quit
       - name: 'Checkout repository'
         uses: actions/checkout@v3
+      - name: 'Fingerprint testsuite'
+        run: >-
+          openssl sha256 testsuite/*.lisp
       - name: 'Run the testsuite'
         run: 'development/testsuite'
