--- a/.github/workflows/run-testsuite-on-big-sur.yaml
+++ b/.github/workflows/run-testsuite-on-big-sur.yaml
@@ -22,10 +22,10 @@ jobs:
           --eval '(quicklisp-quickstart:install)'
           --eval '(ql-util:without-prompting (ql:add-to-init-file))'
           --quit
+      - name: 'Add Workspace to Quicklisp local project directories'
+        run: >-
+          printf '\n(pushnew \043p\"%s\" ql:*local-project-directories*)\n' "${GITHUB_WORKSPACE}" >> ~/.sbclrc
       - name: 'Checkout repository'
         uses: actions/checkout@v3
-      - name: 'Fingerprint testsuite'
-        run: >-
-          openssl sha256 testsuite/*.lisp
       - name: 'Run the testsuite'
         run: 'development/testsuite'
