--- a/.github/workflows/make-documentation.yaml
+++ b/.github/workflows/make-documentation.yaml
@@ -4,7 +4,7 @@ on:
   - workflow_dispatch
 
 jobs:
-  delivery:
+  make-documentation:
     runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
