--- a/.github/workflows/continuous-integration.yaml
+++ b/.github/workflows/continuous-integration.yaml
@@ -4,10 +4,5 @@ on:
   - push
 jobs:
   continuous-integration:
-    uses: melusina-org/reusable/.github/workflows/lisp-continuous-integration.yaml@main
-    with:
-      main-system: 'org.melusina.confidence'
-      testsuite-system: 'org.melusina.confidence/testsuite'
-      testsuite-entrypoint: 'run-all-tests'
-      linter-system: 'org.melusina.confidence/development'
-      linter-entrypoint: 'lint'
+    name: 'Lisp Continuous Integration'
+    uses: melusina-org/reusable/.github/workflows/lisp-continuous-integration.yaml@v1
